# orthanc-load-test

./: .editorconfig  .gitignore  LICENSE  README.md  core.py  docker-compose.yml  locustfile.py  pyproject.toml
haproxy/: haproxy.cfg
orthanc/config/: orthanc.json
